@@ -2,9 +2,8 @@
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/notebook" position="inside">
-        <page name="guarantees">
-            <field name="guarantees"/>
-        </page>
+    <xpath expr="/form//field[@name='description']" position="after">
+        <label name="guarantee_type"/>
+        <field name="guarantee_type"/>
     </xpath>
 </data>
