@@ -1,3 +1,4 @@
+* Automate gaurantee creation from sales
 * Add test scenario
 
 Version 3.4.0 - 2014-11-10
